fix: header and footer responsive font size  on smaller screens

--- a/orders/static/orders/css/base.css
+++ b/orders/static/orders/css/base.css
@@ -116,3 +116,14 @@
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
   cursor: pointer;
 }
+
+@media (max-width: 768px) {
+    .header-title {
+    font-size: 1.5rem !important;
+    }
+    .footer-title {
+    font-size: 1rem;
+}
+
+}
+
